# opd-bot

./: .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  REVIEW.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_init.py  0002_indexes.py  0003_document_sha256.py
scripts/: backup.bat  backup.sh
src/opdbot/: config.py  logging.py  main.py
src/opdbot/bot/: texts.py
src/opdbot/bot/handlers/: common.py  fallback.py
src/opdbot/bot/handlers/candidate/: docs.py  feedback.py  onboarding.py  scheduling.py  status.py
src/opdbot/bot/handlers/hr/: applications.py  catalog.py  documents_gen.py  menu.py  review.py  slots.py
src/opdbot/bot/keyboards/: calendar.py  goals.py  hr.py  main_menu.py
src/opdbot/bot/middlewares/: auth.py  db.py
src/opdbot/bot/states/: candidate.py  hr.py
src/opdbot/db/: base.py  models.py
src/opdbot/db/repo/: applications.py  documents.py  slots.py  users.py
src/opdbot/services/: documents.py  notifications.py  pdf.py  storage.py
src/opdbot/utils/: dates.py  datetime.py  validators.py
templates/: README.md
tests/: conftest.py
tests/test_services/: test_repos.py  test_slots.py  test_validators.py
