[project]
name = "opd-bot"
version = "0.1.0"
description = "Telegram bot for HR automation at PTZ"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-docx>=1.1",
    "docxtpl>=0.16",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opdbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
